--- a/src/locales/ru/translation.json
+++ b/src/locales/ru/translation.json
@@ -2,7 +2,8 @@
   "nav": {
     "home": "Главная",
     "dashboard": "Кабинет",
-    "settings": "Настройки",
+    "settings": "Подключить счет",
+    "referralsFull": "Реферальная система",
     "lang": "Язык"
   },
   "login": {
@@ -187,5 +188,22 @@
       "item3": "Баланс для торговли бота — сумма, выделенная под бота (не меньше 500 USDT)."
     },
     "warning": "Если при подключении видите ошибки авторизации или ограничения IP — проверьте, что в белом списке указан именно {{ip}}, а права выставлены корректно."
+  },
+  "referrals": {
+    "title": "Реферальная система",
+    "description": "Вот ваша реферальная ссылка. Отправьте ее своим друзьям и знакомым — они получат дополнительные 50 USDT на свой депозит при регистрации, а вы будете получать 20% от их пополнений депозита на указанный вами UID Bybit.",
+    "invited": "Приглашено",
+    "earned": "Заработано",
+    "bonus": "Бонус рефералу",
+    "copy": "Копировать",
+    "note": "Вопросы? Пишите в поддержку:",
+    "bybitUID": {
+      "title": "UID Bybit для вывода реферальной прибыли",
+      "desc": "Укажите ваш UID Bybit (только цифры, 6–20 символов). На этот счёт будет приходить 20% от пополнений ваших рефералов.",
+      "placeholder": "например: 12345678",
+      "save": "Сохранить",
+      "saved": "UID сохранён!",
+      "error": "UID должен содержать 6–20 цифр"
+    }
   }
 }
