--- a/src/locales/ru/translation.json
+++ b/src/locales/ru/translation.json
@@ -19,7 +19,12 @@
     "balance": "Баланс для торговли бота",
     "deposit": "Депозит",
     "profit": "Доход (чистую прибыль смотрите в боте)",
-    "deals": "Закрытые сделки: {{count}}"
+    "deals": "Закрытые сделки: {{count}}",
+    "balanceMode": "Режим торговли",
+    "tradeFullBalance": "Торговать всем доступным балансом",
+    "tradeFixedBalance": "Торговать фиксированным балансом",
+    "balanceUpdated": "Режим торговли успешно обновлён",
+    "updateError": "Не удалось обновить режим торговли"
   },
   "connect": {
     "title": "Подключение / обновление API‑ключей",
@@ -32,7 +37,10 @@
     "save": "Сохранить",
     "saved": "Сохранено",
     "success": "Счёт успешно подключён",
-    "help": "Инструкция по API ключам"
+    "help": "Инструкция по API ключам",
+    "useFullBalance": "Использовать весь доступный баланс (рекомендуется)",
+    "acceptTerms": "Подключая счет, я принимаю условия",
+    "acceptRisks": "Я осознаю, что торговля на бирже несет высокие риски и беру на себя полную ответственность за возможные убытки"
   },
   "deposit": {
     "title": "Управление депозитом",
@@ -128,7 +136,7 @@
   },
   "balanceEditor": {
     "title": "Изменение баланса для торговли бота",
-    "description": "Введите новое значение.",
+    "description": "Вы можете разрешить боту использовать все средства на вашем счете (рекомендуется) или ввести значение вручную.",
     "inputLabel": "Баланс",
     "saveBtn": "Сохранить",
     "success": "Баланс обновлён",
